廠商訂單出餐 bug 修改

--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -372,6 +372,7 @@
       <DependentUpon>FoodStreetModel.tt</DependentUpon>
     </Compile>
     <Compile Include="Models\OrderModels\OrderForView.cs" />
+    <Compile Include="Models\OrderModels\Orderlist.cs" />
     <Compile Include="Models\OrderModels\OrderViewModel.cs" />
     <Compile Include="Models\Product.cs">
       <DependentUpon>FoodStreetModel.tt</DependentUpon>
