--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -290,6 +290,7 @@
     <Content Include="photo\NewFolder1\6\new\E35.jpg" />
     <Content Include="Scripts\jquery.signalR-2.3.0.js" />
     <Content Include="Scripts\jquery.signalR-2.3.0.min.js" />
+    <Content Include="startbootstrap-sb-admin-gh-pages\jquery.dataTables.js" />
     <Content Include="startbootstrap-sb-admin-gh-pages\sb-admin.min.css" />
     <Content Include="SweetAlert2\enhancers.js" />
     <Content Include="SweetAlert2\globalState.js" />
