--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -380,6 +380,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
+    <Compile Include="Controllers\Feedback.cs" />
     <Compile Include="Controllers\MemberController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ProductsController.cs" />
@@ -592,6 +593,7 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\Order\Order_detail_costomer.cshtml" />
     <Content Include="Views\Member\StoreChart.cshtml" />
+    <Content Include="Views\Products\createfeedback.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
