圖片預覽上傳

--- a/task03_0606/task03_0606.csproj
+++ b/task03_0606/task03_0606.csproj
@@ -593,6 +593,7 @@
     <Content Include="Views\Test\Index.cshtml" />
     <Content Include="Views\Order\Order_detail_costomer.cshtml" />
     <Content Include="Views\Member\StoreChart.cshtml" />
+    <Content Include="Views\Member\AddNewProduct.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
