--- a/task03_0606/packages.config
+++ b/task03_0606/packages.config
@@ -1,6 +1,7 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
   <package id="bootstrap" version="3.0.0" targetFramework="net461" />
+  <package id="DynamicInterop" version="0.8.1" targetFramework="net461" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net461" />
   <package id="EntityFramework.zh-Hant" version="6.1.3" targetFramework="net461" />
   <package id="HtmlAgilityPack" version="1.8.4" targetFramework="net461" />
@@ -11,24 +12,26 @@
   <package id="Microsoft.AspNet.Razor.zh-Hant" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.Core.zh-Hant" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.Core.zh-Hant" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.SystemWeb.zh-Hant" version="2.1.2" targetFramework="net461" />
-  <package id="Microsoft.AspNet.SignalR.zh-Hant" version="2.1.2" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb.zh-Hant" version="2.3.0" targetFramework="net461" />
+  <package id="Microsoft.AspNet.SignalR.zh-Hant" version="2.3.0" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.AspNet.WebPages.zh-Hant" version="3.2.3" targetFramework="net461" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="1.0.7" targetFramework="net461" />
   <package id="Microsoft.Net.Compilers" version="2.1.0" targetFramework="net461" developmentDependency="true" />
-  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net461" />
-  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin" version="3.0.1" targetFramework="net461" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Host.SystemWeb.zh-Hant" version="3.0.1" targetFramework="net461" />
-  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net461" />
+  <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.Security.zh-Hant" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Owin.zh-Hant" version="3.0.1" targetFramework="net461" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net461" />
   <package id="Modernizr" version="2.6.2" targetFramework="net461" />
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="Owin" version="1.0" targetFramework="net461" />
+  <package id="R.NET" version="1.7.0" targetFramework="net461" />
+  <package id="R.NET.Community" version="1.7.0" targetFramework="net461" />
   <package id="Wahid-SweetAlert2" version="1.0.0" targetFramework="net461" />
 </packages>
